--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css-files/general.css">
-    <link rel="stylesheet" href="css-files/header.css">
-    <link rel="stylesheet" href="css-files/video.css">
-    <link rel="stylesheet" href="css-files/sidebar.css">
+    <link rel="stylesheet" href="general.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="video.css">
+    <link rel="stylesheet" href="sidebar.css">
 
   </head>
   
