--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <title>
-      YouTube.com Clone
+      YouTube-Clone
     </title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -655,3 +655,4 @@
 
   </body>
 </html>
+
